# rinfomaid

./: .gitignore  Cargo.toml  README.md  result.md
promptfiles/: comeToMyEvent.txt  haikuPrompt.txt
src/: Rinfo_bk02.rs  main.rs  rag.rs  toml_extract.rs
src/BK/: main_bk01.rs  main_bk02.rs
src/rag/: embeddings.rs  search.rs  tokenizer.rs
