[package]
name = "rinfomaid"
version = "1.7.1"
edition = "2024"

[dependencies]
colored = "3.0.0"
clap = "4.5.35"
#clap = "4.5.32"
ollama-rs = "0.3.0"
#ollama-rs = "0.2.6"
tokio = {version = "1.44.2" ,features = ["full"]}
#tokio = {version = "1.44.1" ,features = ["full"]}
toml = "0.8.20"
serde = "1.0.219"
openssl = "0.10.72"