[package]
name = "rinfomaid"
version = "1.8.3"
edition = "2024"

[dependencies]
colored = "3.0.0"
clap = "4.5.35"
#clap = "4.5.32"
ollama-rs = "0.3.0"
#ollama-rs = "0.2.6"
tokio = {version = "1.44.2" ,features = ["full"]}
#tokio = {version = "1.44.1" ,features = ["full"]}
toml = "0.8.20"
serde = "1.0.219"
openssl = "0.10.72"
# RAG dependencies
pdf-extract = "0.7.1"
walkdir = "2.5.0"
regex = "1.10.6"
uuid = {version = "1.10.0", features = ["v4"]}
serde_json = "1.0.132"
bincode = "1.3.3"
anyhow = "1.0.92"